@@ -1,6 +1,13 @@
 $Header$
 ===============================================================
 
+157	Luke Howard <lukeh@padl.com>
+
+	* for MSSFU, use posixMember for group memberships
+	  rather than member (reported by Andy Rechenberg)
+	* ignore SIGPIPE before calling do_close() for
+	  idle_timeout
+
 156	Luke Howard <lukeh@padl.com>
 
 	* logic was around the wrong way in do_search(), 
